<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_gray"
            android:padding="@dimen/text_padding"
            android:text="@string/tour_reviews_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_msg_no_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/message_no_review"
            android:textAlignment="center" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tour_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_gray"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review_form_title"
        android:padding="@dimen/text_padding"
        android:textStyle="bold"
        android:background="@color/color_gray"/>
    <include layout="@layout/form_review" />

</LinearLayout>