<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@drawable/bg_login"
    tools:context=".views.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/compoment_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:drawableRight="@drawable/ic_email"
                android:drawableTint="@color/color_white"
                android:background="@drawable/edittext_style"
                android:hint="@string/hint_email"
                android:textColorHint="@color/color_white"
                android:inputType="textEmailAddress"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_email"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/compoment_vertical_margin"
                android:drawableRight="@drawable/ic_vpn_key"
                android:drawableTint="@color/color_white"
                android:background="@drawable/edittext_style"
                android:hint="@string/hint_pass"
                android:textColorHint="@color/color_white"
                android:inputType="textPassword"
                android:padding="@dimen/text_padding"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tvLogin_SomethingWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edt_password"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:padding="@dimen/text_padding"
                android:text="@string/error_email_or_password_is_wrong"
                android:textColor="#ff0000"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvLogin_SomethingWrong"
                android:textColor="@color/color_white"
                android:layout_marginBottom="@dimen/compoment_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/checkbox_text_remember" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cb_remember"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/compoment_vertical_margin"
                android:background="@drawable/button_style_selecter"
                android:text="@string/button_text_login"
                android:textAllCaps="true"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>