<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:paddingBottom="70dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="13sp"
            android:text="Tap for rating" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/rb_tour"
            style="@style/Widget.MaterialRatingBar.RatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:stepSize="1"
            android:max="5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textSize="13sp"
            android:text="@string/review_form_name" />

        <EditText
            android:id="@+id/edt_review_form_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_padding"
            android:textSize="13sp"
            android:background="@drawable/edittext_round_border"
            android:padding="@dimen/text_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textSize="13sp"
            android:text="@string/review_form_email" />

        <EditText
            android:id="@+id/edt_review_form_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_padding"
            android:textSize="13sp"
            android:background="@drawable/edittext_round_border"
            android:padding="@dimen/text_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textSize="13sp"
            android:text="@string/review_form_content" />

        <EditText
            android:id="@+id/edt_review_form_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_padding"
            android:background="@drawable/edittext_round_border"
            android:maxLines="5"
            android:textSize="13sp"
            android:padding="@dimen/text_padding" />

        <Button
            android:id="@+id/btn_submit_review_form"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_button"
            android:layout_gravity="center"
            android:background="@drawable/shape_button"
            android:text="@string/action_send_review"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.v7.widget.CardView>