<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="115dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/background_item_white"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imvTour"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="@dimen/text_padding">

            <TextView
                android:id="@+id/tvNameTour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NHA TRANG-ĐÀ LẠT"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/rbRating"
                style="@style/Widget.MaterialRatingBar.RatingBar.Indicator.Small"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:numStars="5"
                android:rating="2.0"
                android:stepSize="1.0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_tour_departure"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvTimeDepart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:text="28/12/2017"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRemainSlots"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/text_padding"
                    android:text="@string/item_tour_remaining_slots"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textColor="@android:color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/color_gray" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_tour_adult_s_price"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvItemPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_padding"
                    android:text="20,000,000"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_unit"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnDetail"
                    android:layout_width="60dp"
                    android:layout_height="@dimen/height_button_small"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/text_padding"
                    android:background="@drawable/shape_button"
                    android:text="@string/button_detail"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>